# nyu-robotics

./: .gitignore
demos/: blr_obstacle.lsh
demos/blr/: feature-map.lsh  prototype.lsh  turtlebot-driver-0.lsh  util.lsh
demos/blr/report/: project.tex
demos/bowen/: demo-bowen.lsh
demos/dai/: demo-dai.lsh  freenect2.lsh  pcloud2.lsh  roomba-drive.lsh  roomba-odometry.lsh
lib/OpenBLAS/include/: cblas.h  f77blas.h  openblas_config.h
lush/: COPYRIGHT  Makefile  Makefile.in  README  config.status  configure  configure.ac
lush/freenect/: .#regview.c  freenect.lsh
lush/freenect/snippets/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  example01.c  regview
lush/include/: check_func.h  define.h  dh.h  header.h  idxmac.h  idxops.h  lushconf.h  lushmake.h  lushmake.h.in
lush/local/astar/: a-star-test.lsh  a-star-test.lsh~  a-star.lsh  bresenham.lsh  mapedit.lsh  path-planning.lsh
lush/local/convolve/: blas-config.lsh  blas.lsh  convolve-test.lsh  convolve.lsh  openmp.lsh
lush/lsh/: lush-manual.hlp
lush/src/: Makefile  Makefile.in  allocate.c  arith.c  check_func.c  dh.c  dldbfd.c  dump.c  event.c  fileio.c  graphics.c  htable.c  index.c  io.c  lisp_c.c  lisp_driver.c  main.c  module.c  nan.c  oostruct.c  string.c  symbol.c  toplevel.c  unix.c  x11_driver.c  x11_driver.c.orig
lush/sys/: stdenv.lsh  sysenv.lsh
roombacmd/: Makefile  roombacmd.c  roombacmd.mpl  roombacmd.php  roombacmd.pl  roombacmd.sh  simpletest.c
roombacmd/roombapanel/: index.html  roombacam.html  roombapanel.cgi  roombapanel.css  roombapanel.html
scripts/: post-install.sh
(+78 files in other folders)
